# LFM2.5_for_MLX

./: LICENSE  README.md  flake.nix  pyproject.toml
src/: run.py  serve.py
